@@ -21,7 +21,9 @@
 
 #include <QDialog>
 #include "common.h"
+#include "types.h"
 
+class QCheckBox;
 class QProgressBar;
 class QGroupBox;
 class QDialogButtonBox;
@@ -63,17 +65,25 @@ private slots:
 };
 
 class ReplaceCoordsDialog : public QDialog {
+	Q_OBJECT
+	
 public:
 	explicit ReplaceCoordsDialog (QWidget* parent = null, Qt::WindowFlags f = 0);
 	
-	vector< int > axes () const;
+	vector<int> axes () const;
 	double searchValue () const;
 	double replacementValue () const;
+	bool any () const;
+	bool rel () const;
 	
 private:
 	CheckBoxGroup* cbg_axes;
 	QLabel* lb_search, *lb_replacement;
 	QDoubleSpinBox* dsb_search, *dsb_replacement;
+	QCheckBox* cb_any, *cb_rel;
+	
+private slots:
+	void anyChanged (int state);
 };
 
 // =============================================================================
