@@ -10,3 +10,4 @@
 - Fixed: Coordinates weren't drawn properly on a bright background (was always drawn in bright colors..).
 - Parts are now zoomed to fit properly
 - Added ability to snap to pre-existing vertices while drawing.
+- Replace coords: allow replacing all coords regardless of original value, plus relative moving (offset)
